positionForPoint is broken when a block is positioned relatively inside the parent https://bugs.webkit.org/show_bug.cgi?id=64298

Reviewed by Simon Fraser.

Source/WebCore:

The bug was caused by positionForPointRespectingEditingBoundaries's not taking relativePositionOffset
into account when computing the point in child coordinates. Fixed the bug by adding the offset to
childLocation as needed.

Test: fast/block/positioning/hittest-on-relative-positioned-children.html

* rendering/RenderBlock.cpp:
(WebCore::positionForPointRespectingEditingBoundaries): Fixed the bug; also replaced all instances of
IntPoint by LayoutPoint.

LayoutTests:

Added a test for hit testing on relatively positioned children.

* fast/block/positioning/hittest-on-relative-positioned-children-expected.txt: Added.
* fast/block/positioning/hittest-on-relative-positioned-children.html: Added.


Canonical link: https://commits.webkit.org/80064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90800 268f45cc-cd09-0410-ab3c-d52691b4dbfc